# data_deficient_iucn_species

./: LICENSE  Makefile  README.md  pyproject.toml
notebooks/: 01_data_wrangling.ipynb  02_eda.ipynb  03_modelling.ipynb  iucn_eda.ipynb  iucn_request.ipynb  kenya_eda.ipynb
