[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "data_deficient_iucn_species"
version = "0.0.1"
description = "An exploration of Data Deficient species from the IUCN Red List."
authors = [
  { name = "Azadi Gathui" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["data_deficient_iucn_species"]
include = ["pyproject.toml", "data_deficient_iucn_species/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["data_deficient_iucn_species"]
force-sort-within-sections = true

